Fix bug where navbar would not fold open on small screens

--- a/src/app.scss
+++ b/src/app.scss
@@ -30,3 +30,7 @@ h6,
 	font-size: 1.2rem;
 	color: $white;
 }
+
+.navbar-menu {
+	background-color: $dark;
+}
